--- a/flaskstarter/templates/frontend/tutorial.html
+++ b/flaskstarter/templates/frontend/tutorial.html
@@ -1,4 +1,4 @@
-{% set page_title = 'Tutorial' %}
+{% set page_title = 'How it Works?' %}
 
 {% extends 'layouts/base.html' %}
 
@@ -6,7 +6,7 @@
 <div class="section03" style="min-height: 100vh;">
   <div class="container" style="padding: 0px;">
     <div class="row justify-content-center">
-      <div class="boldauto36" style="margin-bottom: 50px;">Tutorial</div>
+      <div class="boldauto36" style="margin-bottom: 50px;">How it Works?</div>
     </div>
     <div class="row">
       <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;">
