--- a/flaskstarter/templates/layouts/footer.html
+++ b/flaskstarter/templates/layouts/footer.html
@@ -8,35 +8,21 @@
             </div>
             <div class="col-lg-6 d-none d-lg-block justify-content-start" style="padding:0px 60px 0px 60px;">
                 <div class="row" style="margin: 0px; padding:12px 0px 0px 0px;">
-                    <img src="{{url_for('static', filename='tel icon.svg')}}" />
-                    <div class="regularauto16" style="margin-left: 8px; color:hsla(176, 39%, 15%, 1);">+852 3910 3800
-                    </div>
-                </div>
-                <div class="row" style="margin: 0px; padding:12px 0px 0px 0px;">
-                    <img src="{{url_for('static', filename='tel icon.svg')}}" />
-                    <div class="regularauto16" style="margin-left: 8px; color:hsla(176, 39%, 15%, 1);">+852 2793 3233
-                    </div>
-                </div>
-                <div class="row" style="margin: 0px; padding:12px 0px 0px 0px;">
                     <img src="{{url_for('static', filename='mail icon.svg')}}" />
                     <div class="regularauto16" style="margin-left: 8px; color:hsla(176, 39%, 15%, 1);">
-                        covidscope@gmail.com
+                        bg200@cam.ac.uk
                     </div>
                 </div>
                 <div class="row" style="margin: 0px; padding:12px 0px 0px 0px;">
                     <img src="{{url_for('static', filename='link icon.svg')}}" />
-                    <div class="regularauto16"><a href="https://www.d24h.hk/"
+                    <div class="regularauto16"><a href="https://www.stemcells.cam.ac.uk/people/pi/gottgens/"
                             style="margin-left: 8px; color: hsla(176, 39%, 15%, 1)"
-                            target="_blank">https://www.d24h.hk/</a></div>
+                            target="_blank">Gottgens Lab/</a></div>
                 </div>
                 <div class="row" style="margin: 0px; padding:12px 0px 0px 0px;">
                     <div class="align-top"><img src="{{url_for('static', filename='location icon.svg')}}" /></div>
-                    <div class="regularauto16" style="margin-left: 8px; color:hsla(176, 39%, 15%, 1);width:80%;">Units
-                        1201 -
-                        1206, 1223 & 1225,
-                        12/F,
-                        Building 19W, 19 Science Park West Avenue, Hong Kong
-                        Science Park, Pak Shek Kok, New Territories, Hong Kong</div>
+                    <div class="regularauto16" style="margin-left: 8px; color:hsla(176, 39%, 15%, 1);width:80%;">Cambridge Stem Cell Institute,
+                        Jeffrey Cheah Biomedical Centre</div>
                 </div>
                 <div class="row" style="margin:0px; padding:12px 0px 0px 0px">
                     <a href="https://www.facebook.com/hkud24h/" target="_blank"><img
@@ -55,16 +41,16 @@
             <div class="col-lg-3 d-none d-lg-block d-xl-block justify-content-end" style="padding:0px 0px 0px 60px;">
                 <div class="row justify-content-end" style="margin: 15px 0px 30px 0px; padding:0px">
                     <div class="mediumauto18"><a href="{{ url_for('tasks.table_view') }}"
-                            style="color: hsla(169, 91%, 17%, 1)">Explore</a></div>
+                            style="color: hsla(169, 91%, 17%, 1)">Atlas</a></div>
                 </div>
                 <div class="row justify-content-end" style="margin: 30px 0px; padding:0px;">
                     <div class="mediumauto18" style="color: hsla(169, 91%, 17%, 1)"><a
-                            href="{{ url_for('frontend.data') }}" style="color: hsla(169, 91%, 17%, 1)">Data</a>
+                            href="{{ url_for('frontend.data') }}" style="color: hsla(169, 91%, 17%, 1)">Cross-Species Prediction</a>
                     </div>
                 </div>
                 <div class="row justify-content-end" style="margin: 30px 0px; padding:0px;">
                     <div class="mediumauto18" style="color: hsla(169, 91%, 17%, 1)"><a
-                            href="{{ url_for('frontend.tutorial') }}" style="color: hsla(169, 91%, 17%, 1)">Tutorial</a>
+                            href="{{ url_for('frontend.tutorial') }}" style="color: hsla(169, 91%, 17%, 1)">How it Works?</a>
                     </div>
                 </div>
                 <!-- <div class="row justify-content-end" style="margin: 30px 0px; padding:0px;">
@@ -81,7 +67,7 @@
         </div>
         <div class="row justify-content-between" style="margin: 50px 0px 0px 0px; color: #173533 !important;">
             <div>
-                <p>Copyright © 2022 Laboratory of Data Discovery for Health (D²4H). All rights reserved.</p>
+                <p>Copyright © 2024 Gottgens Lab. All rights reserved.</p>
             </div>
             <div>
                 <p><a class="link" href="https://www.d24h.hk/disclaimer-and-privacy-policy/"
