--- a/flaskstarter/templates/layouts/header.html
+++ b/flaskstarter/templates/layouts/header.html
@@ -5,13 +5,13 @@
       <a class="nav-link" href="{{ url_for('frontend.index') }}">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Explore</a>
+      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Atlas</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('frontend.data') }}">Data</a>
+      <a class="nav-link" href="{{ url_for('frontend.data') }}">Cross-Species Prediction</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('frontend.tutorial') }}">Tutorial</a>
+      <a class="nav-link" href="{{ url_for('frontend.tutorial') }}">How it works?</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('tasks.contribute') }}">Contribute</a>
@@ -43,7 +43,7 @@
       <a class="nav-link" href="{{ url_for('frontend.index') }}">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Explore</a>
+      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Atlas</a>
     </li>
     <li class="nav-item dropdown" hidden>
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true"
@@ -55,10 +55,10 @@
       </div>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('frontend.data') }}">Data</a>
+      <a class="nav-link" href="{{ url_for('frontend.data') }}">Cross-Species Prediction</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('frontend.tutorial') }}">Tutorial</a>
+      <a class="nav-link" href="{{ url_for('frontend.tutorial') }}">How it works?</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('frontend.contact_us') }}">Contact</a>
