--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -5,11 +5,11 @@
 <div class="section01">
 
   <div class="container flex-column">
-    <div class="regularS22">What is Covidscope?</div>
+    <div class="regularS22"></div>
     <div class="intro-c">
-      Covidscope stores and provides over 4.8 million
-      single-cell data from 20 published single-cell sequencing data sets. Anyone
-      can explore the insights from our analysis and download the data provided
+      CellMontage stores over x million
+      single-cell data from multiple species atlases. Anyone
+      can explore the insights from our analysis and run cross-species prediction
       here for further analysis.
     </div>
     <div class="d-flex justify-content-center">
