--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -23,7 +23,7 @@
     <div id="searchPage" class="container" style="padding: 0px;">
 
         <div class="row justify-content-start">
-            <div class="boldauto36" style="padding-bottom: 30px; text-transform:none;">Explore scRNA-seq data</div>
+            <div class="boldauto36" style="padding-bottom: 30px; text-transform:none;">Explore Single-Cell Atlases</div>
         </div>
         <!-- <div class="row" id="globalsearch">
             <input style="width: 50%; height: 48px; display:inline-block" class="form-control" id="customSearchBox"
@@ -470,7 +470,7 @@
             enableFiltering: true,
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
-            nonSelectedText: 'Age',
+            nonSelectedText: 'Species',
             buttonWidth: '150px',
             maxHeight: 450
         });
@@ -520,7 +520,7 @@
             enableFiltering: true,
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
-            nonSelectedText: 'Days from onset',
+            nonSelectedText: 'N-hood',
             buttonWidth: '300px',
             maxHeight: 450
         });
@@ -530,7 +530,7 @@
             enableFiltering: true,
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
-            nonSelectedText: 'Outcome',
+            nonSelectedText: 'Label',
             buttonWidth: '150px',
             maxHeight: 450
         });
@@ -540,7 +540,7 @@
             enableFiltering: true,
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
-            nonSelectedText: 'Gender',
+            nonSelectedText: 'Stage',
             buttonWidth: '150px',
             maxHeight: 450
         });
@@ -551,7 +551,7 @@
             enableFiltering: true,
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
-            nonSelectedText: 'Country',
+            nonSelectedText: 'Drop',
             buttonWidth: '150px',
             maxHeight: 450
         });
