--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -147,7 +147,7 @@
             <div style="margin-top: 10px;">
                 <button id="UMAPbutton" class="lightButton" name="show_plot" type="submit"
                     style="display:inline-block; margin-right: 15px;" onclick="showplot()" hidden
-                    title='Select 1 sell type & search before clicking this button' > Show UMAP plot
+                    title='Select 1 cell type & search before clicking this button' > Show UMAP plot
                 </button>
             </div>
         </div>
@@ -158,11 +158,11 @@
                     onclick="window.location.href='{{ url_for( 'frontend.index') }}';"> Return to home </button>
             </div>
 
-            <!-- <div style="margin: 10px 15px 0px 0px;"><button id="btnAdvance" class="mediumButton"
-                    style="display:inline-block ;" title='Show/Hide Advanced Search'>
-                    Advanced
-                    search
-                </button></div> -->
+<!--            <div style="margin: 10px 15px 0px 0px;"><button id="btnAdvance" class="mediumButton"-->
+<!--                    style="display:inline-block ;" title='Show/Hide Advanced Search'>-->
+<!--                    Advanced-->
+<!--                    search-->
+<!--                </button></div>-->
 
             <div style="margin: 10px 15px 0px 0px;">
                 <form class="download" action="{{ url_for('tasks.download_meta')}}" method="post">
@@ -171,20 +171,22 @@
                         Download metadata </button>
                 </form>
             </div>
-            <!-- <div id="matrixFormButton" style="margin: 10px 15px 0px 0px;">
+
+            <div id="matrixFormButton" style="margin: 10px 15px 0px 0px;">
                 <form id="downloadMatrix" class="download" action="{{ url_for('tasks.download_matrix')}}" method="post">
                 </form>
-                <div class="mediumButton" style="display:inline-block;" onclick="showDLform()"><a
+                <button id="DownloadMatrixMainBtn" class="mediumButton" style="display:inline-block;" onclick="showDLform()"><a
                         href="#DownloadMatrixForm">Download
                         matrix</a>
-                </div>
-            </div> -->
+                </button>
+            </div>
             <!-- Hide by junyi 0321 -->
-            <!-- <div id="matrixDownloadButton" style="margin: 10px 15px 0px 0px;">
+            <div id="matrixDownloadButton" style="margin: 10px 15px 0px 0px;">
                 <button class="mediumButton download" name="download_matrix" type="submit" style="display:inline-block;"
                     form="downloadMatrix">
                     Download matrix </button>
-            </div> -->
+            </div>
+
         </div>
 
         <div class="overlay" id="DownloadMatrixForm">
@@ -449,7 +451,7 @@
 
         $("#globalsearch").hide();
 
-        $("#matrixDownloadButton").hide();
+        //$("#matrixDownloadButton").hide();
 
         // $("#btnAdvance").click(function () {
         //     $("#globalsearch").toggle();
@@ -705,6 +707,19 @@
         var entries = entrieString.split('of ').pop().split(' entries')[0];
         entries = entries.replaceAll(',', '');
 
+        //0324 EDIT by junyi
+        if (Number(entries) < 1) {
+            var myButtonArray = [ "UMAPbutton", "mdownloadbutton", "charabutton", "scfbutton", "scfnotify"];
+
+            $.each(myButtonArray, function( index, value ){
+
+                let element = document.getElementById(value);
+                element.setAttribute("hidden", "hidden");
+            });
+
+        }
+
+
         if (Number(entries) < 2000) {
             $("#matrixFormButton").hide();
             $("#matrixDownloadButton").show();
@@ -714,17 +729,7 @@
             $("#matrixDownloadButton").hide();
             $('#emailInput').attr('required', 'required');
         }
-        //0324 EDIT by junyi
-        if (Number(entries) < 1) {
-            var myButtonArray = [ "UMAPbutton", "mdownloadbutton", "charabutton","scfbutton","scfnotify" ];
 
-            $.each(myButtonArray, function( index, value ){
-
-                let element = document.getElementById(value);
-                element.setAttribute("hidden", "hidden");
-            });
-
-        }
         console.log("Number of queired records",Number(entries))
 
         return Number(entries);
